<resources>
    <string name="app_name">ARQuiz</string>
    <string name="explore_btn">Explore</string>

    <string name="button_OK">OK</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>

    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>

    <string name="WIFI_PERMISSION">Wifi is disabled! Making it enabled.</string>
    <string name="WIFI_GETTING_DATA">Getting wifi informations.</string>

    <string name="STR_EMAIL">Email</string>
    <string name="STR_PASSWORD">Password</string>
    <string name="STR_PASSWORD_REPEAT">Password again</string>
    <string name="STR_LOGIN">LOGIN</string>
    <string name="STR_SIGN_IN">Sign in</string>
    <string name="STR_LOGOUT">LOGOUT</string>
    <string name="STR_QUESTIONS_LIST">Questions List</string>
    <string name="STR_ACTUAL_POSITION">Actual position:</string>
    <string name="STR_ACTUAL_POSITION_p">Actual position: %1$s</string>
    <string name="STR_COMPETITIONS">Competitions</string>
    <string name="STR_COMPETITIONS_LIST">Actual list of competitions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BTN_ENTER">Enter</string>
    <string name="BTN_SEARCH_TARGET">Search target</string>
    <string name="BTN_ANSWER">Answer</string>
    <string name="STR_ANSWER_IS">Your answer is</string>
    <string name="STR_UNKNOW_ANSWER">*????*</string>
    <string name="STR_NEXT_QUESTION">Next Question</string>
    <string name="STR_LOGIN_REQUIRED">You need to be logged in to achieve answer points</string>
    <string name="STR_ANSWER_SCORE">You achieve %1$d points</string>
    <string name="STR_ANSWER_RESULT_C">Correct !</string>
    <string name="STR_ANSWER_RESULT_W">Wrong !</string>
    <string name="STR_CHART">Chart</string>
    <string name="STR_CHART_DESC">Actual chart of competition</string>
    <string name="STR_CHART_PTS">pts</string>
    <string name="STR_CHART_POSITION">%1$d.</string>
    <string name="BTN_SIGN_UP_FOR_FREE">Sign up for free</string>
    <string name="BTN_SIGN_UP">Sign up</string>

    <string name="STR_QUESTION_WRITABLE">This is writable question</string>
</resources>
