<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_answer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lepko.martin.arquiz.AnswerActivity">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/splash_bg"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">

            <TextView
                style="@style/AnswerTitle"
                android:text="@string/STR_ANSWER_IS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4">

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/progressBar"
                android:layout_centerInParent="true"/>

            <TextView
                style="@style/AnswerResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/answerResult" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5">

                    <TextView
                        style="@style/Note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/noteTextView" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5">

                    <Button
                        style="@style/MainBtn"
                        android:layout_centerInParent="true"
                        android:text="@string/STR_LOGIN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/loginBtn"
                        android:visibility="gone"
                        android:onClick="onLogin"/>

                    <Button
                        style="@style/MainBtn"
                        android:layout_centerInParent="true"
                        android:text="@string/STR_NEXT_QUESTION"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nextQuesitonBtn"
                        android:visibility="gone"
                        android:onClick="onNextQuestion"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
